Updates Travis file

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,5 +19,7 @@ deploy:
     keep-history: false
     varbose: true
     on:
-      branch: gh-pages
+      branches:
+        only:
+          - gh-pages
       
