--- a/web-page/package.json
+++ b/web-page/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-app",
+  "name": "dbs-scraper",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -7,6 +7,7 @@
     "react-dom": "^16.3.2",
     "react-scripts": "1.1.4"
   },
+  "homepage": "https://xotl.github.io/dbs-scraper",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
