Updates travis.yml (#5)

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ install:
 
 script:
   - docker run --name scrapper -v ${TRAVIS_BUILD_DIR}:/home/node/app/web-page/build dbs-scrapper yarn build
+  - docker run --name scrapper -v ${TRAVIS_BUILD_DIR}:/home/node/app/releases/ dbs-scrapper cp ./src/cards.json /home/node/app/releases/cards.json
 
 deploy:
   - provider: releases
