--- a/.travis.yml
+++ b/.travis.yml
@@ -3,20 +3,22 @@
 services:
   - docker
 
-before_install:
-  - docker pull node:9
+# before_install:
+#   - docker pull node:9
 
 install:
-  - docker build -t dbs-scrapper .
+  - docker build -t dbs-scraper .
 
 script:
-  - docker run --name scrapper -v ${TRAVIS_BUILD_DIR}:/home/node/app/web-page/build dbs-scrapper yarn build
-  - docker run --name scrapper -v ${TRAVIS_BUILD_DIR}:/home/node/app/release dbs-scrapper cp ./src/cards.json /home/node/app/release/cards.json
+  - mkdir ${TRAVIS_BUILD_DIR}/build
+  - mkdir ${TRAVIS_BUILD_DIR}/release
+  - docker run -v ${TRAVIS_BUILD_DIR}/release:/home/node/app/release dbs-scraper cp ./src/cards.json /home/node/app/release/cards.json
+  - docker run --rm -v ${TRAVIS_BUILD_DIR}/build:/home/node/app/web-page/build dbs-scraper yarn build
 
 deploy:
   - provider: releases
     api_key: $GITHUB_OAUTH_TOKEN
-    file: cards.json
+    file: release/cards.json
     skip_cleanup: true
     on:
       tags: false
@@ -24,6 +26,7 @@ deploy:
     skip-cleanup: true
     github-token: $GITHUB_OAUTH_TOKEN
     keep-history: false
+    local-dir: build/
     varbose: true
     on:
       branches:
