--- a/scraper/package.json
+++ b/scraper/package.json
@@ -5,6 +5,7 @@
     "main": "src/index.js",
     "scripts": {
         "start": "node src/index.js",
+        "debug": "node --inspect-brk=0.0.0.0:9229 src/index.js",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "repository": {
