--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -3,32 +3,26 @@
     // for the documentation about the tasks.json format
     "version": "2.0.0",
     "tasks": [
-        {
-            "label": "Build Docker image",
-            "type": "shell",
-            "command": "docker build -t dbs-scraper .",
-            "group": {
-                "kind": "build",
-                "isDefault": true
-            }
-        },
+
+        // Scraper tasks
         {
             "label": "Build scraper Docker image",
             "type": "shell",
-            "command": "cd ./scraper; docker build -t dbs-scraper .",
-            "group": {
-                "kind": "build",
-                "isDefault": true
+            "command": "docker build -t dbs-scraper ./scraper",
+            "presentation": {
+                "reveal":"silent",
+                "panel": "shared",
             }
         },
         {
-            "label": "Prepare before running React App",
+            "label": "Remove scraper app container",
             "type": "shell",
-            "command": "echo \"Ready to run!\"",
-            "dependsOn": [
-                "Get cards.json file into web-page folder",
-                "Remove react app container"
-            ]
+            "command": "docker kill $(docker ps | grep \"dbs-scraper\" | tr -s \" \" | cut -f 1 -d \" \") || true",
+            "presentation": {
+                "echo": false,
+                "reveal":"silent",
+                "panel": "shared",
+            }
         },
         {
             "label": "Prepare before running scraper app",
@@ -37,91 +31,61 @@
             "dependsOn": [
                 "Remove scraper app container",
                 "Build scraper Docker image"
-            ]
-        },
-        {
-            "label": "Run Tests",
-            "type": "shell",
-            "command": "docker run --rm dbs-scraper npm test",
-            "dependsOn": [ "Build Docker image"],
-            "group": {
-                "kind": "test",
-                "isDefault": true
-            }
-        },
-        {
-            "label": "Remove react app container",
-            "type": "shell",
-            "command": "docker kill dbs-scraper-ui || docker rm dbs-scraper-ui || true",
-            "group": "build",
+            ],
             "presentation": {
-                "reveal": "never",
-                "panel": "shared"
+                "echo": false,
+                "reveal":"silent",
+                "panel": "shared",
             }
         },
+        
+        // Web page tasks
         {
-            "label": "Remove scraper app container",
+            "label": "Build React app Docker image",
             "type": "shell",
-            "command": "docker kill dbs-scraper || docker rm dbs-scraper || true",
-            "group": "build",
+            "command": "docker build -t dbs-web ./scraper",
             "presentation": {
-                "reveal": "never",
-                "panel": "shared"
+                "reveal":"silent",
+                "panel": "shared",
             }
         },
         {
-            "label": "Run react app (detached)",
-            "type": "process",
-            "command": "docker",
-            "args": [
-                "run", "--rm", "-d",
-                "--name", "dbs-scraper-ui",
-                "-p", "3000:3000",
-                "-v", "${workspaceFolder}/web-page/src:/home/node/app/web-page/src",
-                "dbs-scraper",
-                "npm", "start"
-            ],
-            "dependsOn": [
-                "Prepare before running React App"
-            ],
-            "group": "test",
-            "presentation": {
-                "reveal": "always",
-                // "panel": "new"
-            }
-        },
-        {
-            "label": "Run scraper", 
-            "type": "process",
-            "command": "docker",
-            "args": [
-                "run",
-                "--name", "dbs-scraper",
-                "-p", "9229:9229",
-                "dbs-scraper",
-                "npm", "start", "--prefix", "/home/node/app/scraper"
-            ],
-            "dependsOn": [
-                "Remove scraper app container",
-                "Build Docker image"
-            ],
-            "group": "test"
-        },
-        {
-            "label": "Get cards.json file into web-page folder",
+            "label": "Remove React app container",
             "type": "shell",
-            "command": "docker",
-            "args": [
-                "cp", 
-                "dbs-scraper:/home/node/app/scraper/src/cards.json",
-                "${workspaceFolder}/web-page/src/cards.json",
-                "&&",
-                "docker", "rm" , "dbs-scraper"
-            ],
+            "command": "docker kill $(docker ps | grep \"dbs-web\" | tr -s \" \" | cut -f 1 -d \" \") || true",
+            "presentation": {
+                "echo": false,
+                "reveal":"silent",
+                "panel": "shared",
+            }
+        },
+        {
+            "label": "Get cards.json if not present",
+            "type": "shell",
+            "command": "${workspaceFolder}/tools/get-cards-file.sh",
             "dependsOn": [
-                "Run scraper"
+                "Prepare before running scraper app"
             ],
-            "group": "build"
+            "presentation": {
+                "reveal":"silent",
+                "panel": "shared",
+            }
+        },
+        {
+            "label": "Prepare before running React app",
+            "type": "shell",
+            "command": "echo \"Ready to run!\"",
+            "dependsOn": [
+                "Get cards.json if not present",
+                "Remove React app container",
+                "Build React app Docker image"
+            ],
+            "presentation": {
+                "echo": false,
+                "reveal":"silent",
+                "panel": "shared",
+                "clear": true
+            }
         }
     ]
 }
