Fixes typo in launch script label

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,7 +7,7 @@
         {
             "type": "node",
             "request": "launch",
-            "name": "Run scrapper",
+            "name": "Run scraper",
             "preLaunchTask": "Prepare before running scraper app",
             "runtimeExecutable": "docker",
             "runtimeArgs": [
