--- a/.github/workflows/cards.yml
+++ b/.github/workflows/cards.yml
@@ -1,8 +1,8 @@
 name: 'DBS Scraper | Update cards'
 
 on:
-  schedule:
-    - cron:  '0 6 * * *'
+  # schedule:
+  #   - cron:  '0 6 * * *'
   push: 
     paths:
       - 'scraper/**'
