--- a/.github/workflows/cards.yml
+++ b/.github/workflows/cards.yml
@@ -53,7 +53,7 @@ jobs:
   
   release:
     name: 'Scrap page & get cards'
-    if: ${{env.NEW_CARDS}} == 'true'
+    if: NEW_CARDS == 'true'
     runs-on: ubuntu-latest
 
     steps:
