--- a/.github/workflows/cards.yml
+++ b/.github/workflows/cards.yml
@@ -51,7 +51,7 @@ jobs:
           name: cards.json
           path: ${{env.TODAY_CARDS_FILE}}
   
-  release:
+  create-release:
     name: 'Scrap page & get cards'
     if: NEW_CARDS == 'true'
     runs-on: ubuntu-latest
