--- a/.github/workflows/web-deploy.yml
+++ b/.github/workflows/web-deploy.yml
@@ -33,13 +33,16 @@ jobs:
           echo "listing ${PWD}/build"
           ls ./build
 
-      # - name: Push to gh-pages branch
-      #   env:
-      #     REMOTE_REPO: https://${{ secrets.GITHUB_OAUTH_TOKEN }}@github.com/${{ github.repository }}.git
-      #   run: |
-      #     NEW_TAG="web_$(date --utc '+%Y-%m-%d/%Hh-%Mm')"
-      #     find ./build -regextype 'posix-extended' -mindepth 1 ! -regex '^\.\/(build|\.git)(\/.*)?' -delete
-      #     git add -A
-      #     git commit -m "New version"
-      #     git tag -a "${{env.NEW_TAG}}" -m "${{env.NEW_TAG}} | Auto pushed from Github Actions"
-      #     git push -f --follow-tags ${REMOTE_REPO} HEAD:gh-pages
+      - name: Push to gh-pages branch
+        env:
+          REMOTE_REPO: https://${{ secrets.GITHUB_OAUTH_TOKEN }}@github.com/${{ github.repository }}.git
+        run: |
+          find ./build -regextype 'posix-extended' -mindepth 1 ! -regex '^\.\/(build|\.git)(\/.*)?' -delete
+          ls -a
+        # run: |
+        #   NEW_TAG="web_$(date --utc '+%Y-%m-%d/%Hh-%Mm')"
+        #   find ./build -regextype 'posix-extended' -mindepth 1 ! -regex '^\.\/(build|\.git)(\/.*)?' -delete
+        #   git add -A
+        #   git commit -m "New version"
+        #   git tag -a "${{env.NEW_TAG}}" -m "${{env.NEW_TAG}} | Auto pushed from Github Actions"
+        #   git push -f --follow-tags ${REMOTE_REPO} HEAD:gh-pages
