--- a/.github/workflows/web-deploy.yml
+++ b/.github/workflows/web-deploy.yml
@@ -11,6 +11,8 @@ jobs:
   deploy:
     name: 'Scrap page & get cards'
     runs-on: ubuntu-latest
+    env:
+      LATEST_RELEASE_CARDS_FILE: ./web-page/src/cards.json
 
     steps:
       - name: Checkout
@@ -18,16 +20,17 @@ jobs:
 
       - name: Download cards.json from latest release
         uses: Xotl/cool-github-releases@v1
-        env:
-          LATEST_RELEASE_CARDS_FILE: ./web-page/src/cards.json
         with:
           assets: cards.json|${{env.LATEST_RELEASE_CARDS_FILE}}
           github_token: ${{ github.token }} 
 
       - name: Build app files
+        env: 
+          APP_PATH: /home/node/app
         run: |
-          docker build -t dbs-web ./web-page
-          docker run --rm -v ${PWD}/build:/home/node/app/build dbs-web npm run build
+          ls ./web-page/src
+          docker build --no-cache -t dbs-web ./web-page
+          docker run --rm -v ${PWD}/build:${{env.APP_PATH}}/build dbs-web npm run build
           echo "listing ${PWD}/build"
           ls ./build
 
