--- a/.github/workflows/web-deploy.yml
+++ b/.github/workflows/web-deploy.yml
@@ -25,8 +25,6 @@ jobs:
           github_token: ${{ github.token }} 
 
       - name: Build Docker image
-        env: 
-          APP_PATH: /home/node/app
         run: |
           docker build --no-cache -t dbs-web ./web-page
       
@@ -34,7 +32,8 @@ jobs:
         env: 
           APP_PATH: /home/node/app
         run: |
-          docker run --rm -v ${PWD}/build:${{env.APP_PATH}}/build dbs-web npm run build
+          mkdir build
+          docker run --rm -v ./build:${{env.APP_PATH}}/build dbs-web npm run build
           echo "listing ${PWD}/build"
           ls ./build
 
@@ -42,10 +41,8 @@ jobs:
         env:
           REMOTE_REPO: https://${{ secrets.GITHUB_OAUTH_TOKEN }}@github.com/${{ github.repository }}.git
         run: |
-          ls -a
           find ./ -regextype 'posix-extended' -mindepth 1 ! -regex '^\.\/(build|\.git)(\/.*)?' -delete
-          ls -a
-          mv ./build ${PWD}
+          mv ./build/* ./
           ls -a
         # run: |
         #   NEW_TAG="web_$(date --utc '+%Y-%m-%d/%Hh-%Mm')"
