--- a/.github/workflows/cards.yml
+++ b/.github/workflows/cards.yml
@@ -4,6 +4,8 @@ on:
   schedule:
     - cron:  '0 6 * * *'
   push: 
+    branches:
+      - 'master'
     paths:
       - 'scraper/**'
       - '.github/workflows/cards.yml'
