--- a/.github/workflows/web-deploy.yml
+++ b/.github/workflows/web-deploy.yml
@@ -1,11 +1,7 @@
 name: 'DBS Scraper | Web deploy'
 on:
-  push: 
-    # branches: 
-    #   - 'refs/tags/cards**'
-    paths:
-      - 'web-page/**'
-      - '.github/workflows/**'
+    tags:
+      - cards**'
 
 jobs:
   deploy:
