--- a/.github/workflows/web-deploy.yml
+++ b/.github/workflows/web-deploy.yml
@@ -42,6 +42,8 @@ jobs:
           REMOTE_REPO: https://${{ github.token }}@github.com/${{ github.repository }}.git
           NEW_TAG: web_$(date --utc '+%Y-%m-%d/%Hh-%Mm')
         run: |
+          git config user.name "github"
+          git config user.email "github@users.noreply.github.com"
           git add -A
           git commit -m "${{env.NEW_TAG}} | Auto pushed from Github Actions"
           git tag -a "${{env.NEW_TAG}}" -m "${{env.NEW_TAG}} | Auto pushed from Github Actions"
